--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "axios": "^1.6.7",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
